Reduces vertical spacing beetween membership containers. Related to issue #629

--- a/src/shared/components/iconCard/iconCard.css
+++ b/src/shared/components/iconCard/iconCard.css
@@ -20,7 +20,7 @@ a.iconCard:hover {
 }
 
 .iconCardWithSubText {
-  height: 425px;
+  height: 325px;
 }
 
 .iconCard__icon {
